--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,11 +3,22 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 bind-key v split-window -v
 bind-key h split-window -h
+
+
 bind-key m copy-mode
 setw -g mode-key vi
 set-window-option -g mode-keys vi
+
+
 bind -n C-k clear-history
 set-option -g history-limit 10000
+
+
+# Using ctr-h andh ctr-backspace to move between window
+bind-key -n C-H next-window
+
+
+
 IGNOREEOF=10
 bind-key -r -T prefix  H resize-pane -L 2
 bind-key -r -T prefix  N resize-pane -D 2
