--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,8 +17,6 @@ set-option -g history-limit 10000
 # Using ctr-h andh ctr-backspace to move between window
 bind-key -n C-H next-window
 
-
-
 IGNOREEOF=10
 bind-key -r -T prefix  H resize-pane -L 2
 bind-key -r -T prefix  N resize-pane -D 2
@@ -26,3 +24,6 @@ bind-key -r -T prefix  K resize-pane -U 2
 bind-key -r -T prefix  L resize-pane -R 2
 bind C-k send-keys -R \; clear-history
 bind-key -n C-n next-window
+
+set-option -sa terminal-overrides ",xterm*:Tc"
+
