--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,12 +10,19 @@ setw -g mode-key vi
 set-window-option -g mode-keys vi
 
 
-bind -n C-k clear-history
 set-option -g history-limit 10000
 
 
 # Using ctr-h andh ctr-backspace to move between window
-bind-key -n C-H next-window
+#bind-key -n C-H next-window
+
+
+#bind -r C-h select-window -t :-
+#bind -r C-l select-window -t :+
+bind-key -n C-j select-window -t :-
+bind-key -n C-k select-window -t :+
+
+
 
 IGNOREEOF=10
 bind-key -r -T prefix  H resize-pane -L 2
@@ -27,3 +34,6 @@ bind-key -n C-n next-window
 
 set-option -sa terminal-overrides ",xterm*:Tc"
 
+
+unbind r
+bind r source-file ~/.tmux.conf
