--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,9 +16,7 @@ set-option -g history-limit 10000
 # Using ctr-h andh ctr-backspace to move between window
 #bind-key -n C-H next-window
 
-
-#bind -r C-h select-window -t :-
-#bind -r C-l select-window -t :+
+bind-key -n C-[ copy-mode
 bind-key -n C-j select-window -t :-
 bind-key -n C-k select-window -t :+
 
