--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ bind-key v split-window -v
 bind-key h split-window -h
 
 
+bind-key -n C-[ copy-mode
 bind-key m copy-mode
 setw -g mode-key vi
 set-window-option -g mode-keys vi
@@ -16,7 +17,9 @@ set-option -g history-limit 10000
 # Using ctr-h andh ctr-backspace to move between window
 #bind-key -n C-H next-window
 
-bind-key -n C-[ copy-mode
+
+#bind -r C-h select-window -t :-
+#bind -r C-l select-window -t :+
 bind-key -n C-j select-window -t :-
 bind-key -n C-k select-window -t :+
 
@@ -30,8 +33,14 @@ bind-key -r -T prefix  L resize-pane -R 2
 bind C-k send-keys -R \; clear-history
 bind-key -n C-n next-window
 
+#set -g default-terminal "tmux-256color"
+#set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 
 unbind r
 bind r source-file ~/.tmux.conf
+
+
+
+set -sg escape-time 5
