--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,10 @@ bind-key v split-window -v
 bind-key h split-window -h
 
 
-bind-key -n C-[ copy-mode
-bind-key m copy-mode
+
+unbind C-l
+bind-key -n C-l copy-mode
+#bind-key m copy-mode
 setw -g mode-key vi
 set-window-option -g mode-keys vi
 
@@ -41,6 +43,3 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 unbind r
 bind r source-file ~/.tmux.conf
 
-
-
-set -sg escape-time 5
