--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,8 +22,8 @@ set-option -g history-limit 10000
 
 #bind -r C-h select-window -t :-
 #bind -r C-l select-window -t :+
-bind-key -n C-j select-window -t :-
-bind-key -n C-k select-window -t :+
+bind-key -n C-j select-pane -U
+bind-key -n C-k select-pane -L
 
 
 
