tmux background color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
@@ -6,9 +7,9 @@ bind-key h split-window -h
 
 
 
-unbind C-l
-bind-key -n C-l copy-mode
-#bind-key m copy-mode
+#unbind C-l
+#bind-key -n C-l copy-mode
+bind-key m copy-mode
 setw -g mode-key vi
 set-window-option -g mode-keys vi
 
@@ -17,27 +18,32 @@ set-option -g history-limit 10000
 
 
 # Using ctr-h andh ctr-backspace to move between window
-#bind-key -n C-H next-window
+# bind-key -n C-H next-window
 
 
-#bind -r C-h select-window -t :-
-#bind -r C-l select-window -t :+
-bind-key -n C-j select-pane -U
+bind-key -n C-j select-pane -U # D
 bind-key -n C-k select-pane -L
+bind-key -n C-n select-window -t :+
+#bind-key -n C-p select-window -t :+
+
+# Channge backeground color of the active window
+set -g window-style 'bg=color239'
+set -g window-active-style 'bg=terminal'
 
 
 
 IGNOREEOF=10
 bind-key -r -T prefix  H resize-pane -L 2
-bind-key -r -T prefix  N resize-pane -D 2
+bind-key -r -T prefix  J resize-pane -D 2
 bind-key -r -T prefix  K resize-pane -U 2
 bind-key -r -T prefix  L resize-pane -R 2
 bind C-k send-keys -R \; clear-history
-bind-key -n C-n next-window
 
 #set -g default-terminal "tmux-256color"
 #set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -gw xterm-keys on
+
 
 
 unbind r
