--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,8 @@
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-bind-key v split-window -v
-bind-key h split-window -h
+#bind-key v split-window -v
+#bind-key h split-window -h
 
 
 
@@ -19,6 +19,8 @@ set-option -g history-limit 10000
 
 # Using ctr-h andh ctr-backspace to move between window
 # bind-key -n C-H next-window
+bind-key -n M-i split-window -h
+bind-key -n C-x resize-pane -Z
 
 
 bind-key -n C-j select-pane -U # D
@@ -48,4 +50,11 @@ set-option -gw xterm-keys on
 
 unbind r
 bind r source-file ~/.tmux.conf
+
+
+set -g status-bg default
+set -g window-status-style fg=yellow,bg=black
+set -g window-status-current-style fg=green,bg=black
+
+
 
