--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,13 +48,10 @@ set-option -gw xterm-keys on
 
 
 
-unbind r
-bind r source-file ~/.tmux.conf
-
-
-set -g status-bg default
+set-option -g status-style bg=default
 set -g window-status-style fg=yellow,bg=black
 set -g window-status-current-style fg=green,bg=black
 
+#set -g window-status-style fg=yellow,bg=black
 
 
