--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,7 @@ bind-key -n C-x resize-pane -Z
 bind-key -n C-j select-pane -U # D
 bind-key -n C-k select-pane -L
 bind-key -n C-n select-window -t :+
-#bind-key -n C-p select-window -t :+
+bind-key -n C-b select-window -t :-
 
 # Channge backeground color of the active window
 set -g window-style 'bg=color239'
