--- a/.inputrc
+++ b/.inputrc
@@ -1,4 +1,6 @@
 set bind-tty-special-chars Off
-TAB: complete-filename
 M-/: complete
 set colored-stats on
+TAB: menu-complete
+set show-all-if-ambiguous on
+set menu-complete-display-prefix on
