--- a/.inputrc
+++ b/.inputrc
@@ -1,6 +1,20 @@
+#set editing-mode vi
 set bind-tty-special-chars Off
 M-/: complete
+
+
 set colored-stats on
+set visible-stats On
+
 TAB: menu-complete
 set show-all-if-ambiguous on
 set menu-complete-display-prefix on
+
+#set show-mode-in-prompt on
+#set vi-ins-mode-string
+#set vi-cmd-mode-string *
+
+
+"\C-e": end-of-line
+"\C-a": beginning-of-line
+"\C-t": reverse-search-history
