--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,8 @@
-
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-#bind-key v split-window -v
-#bind-key h split-window -h
+bind-key v split-window -v
+bind-key k split-window -h
 
 
 
@@ -25,12 +24,17 @@ bind-key -n C-x resize-pane -Z
 
 bind-key -n C-j select-pane -U # D
 bind-key -n C-k select-pane -L
+bind-key -n C-o select-pane -t :.+
+
 bind-key -n C-n select-window -t :+
 bind-key -n C-b select-window -t :-
 
 # Channge backeground color of the active window
 set -g window-style 'bg=color239'
 set -g window-active-style 'bg=terminal'
+
+
+bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 
 
@@ -52,6 +56,4 @@ set-option -g status-style bg=default
 set -g window-status-style fg=yellow,bg=black
 set -g window-status-current-style fg=green,bg=black
 
-#set -g window-status-style fg=yellow,bg=black
-
-
+set -as terminal-features ',rxvt-unicode-256color:clipboard'
