--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,3 +57,5 @@ set -g window-status-style fg=yellow,bg=black
 set -g window-status-current-style fg=green,bg=black
 
 set -as terminal-features ',rxvt-unicode-256color:clipboard'
+# Add tmux copy clipboard
+set-option -g set-clipboard on
