--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,13 @@
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-bind-key v split-window -v
-bind-key k split-window -h
+bind-key v split-window -v  -h -c "#{pane_current_path}"
+bind-key k split-window -h  -h -c "#{pane_current_path}"
 
 
 
-#unbind C-l
-#bind-key -n C-l copy-mode
+unbind C-l
+bind-key -n C-l copy-mode
 bind-key m copy-mode
 setw -g mode-key vi
 set-window-option -g mode-keys vi
