--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ bind-key C-a send-prefix
 bind-key v split-window -v  -h -c "#{pane_current_path}"
 bind-key k split-window -h  -h -c "#{pane_current_path}"
 
+# Ctr-z for zoom in zoom out
+bind-key -n C-z resize-pane -Z
 
 
 unbind C-l
@@ -59,3 +61,6 @@ set -g window-status-current-style fg=green,bg=black
 set -as terminal-features ',rxvt-unicode-256color:clipboard'
 # Add tmux copy clipboard
 set-option -g set-clipboard on
+
+# Date time at right panel
+set-option -g status-right '#{window_panes} panes | %H:%M %d-%b-%y'
