--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-bind-key v split-window -v  -h -c "#{pane_current_path}"
-bind-key k split-window -h  -h -c "#{pane_current_path}"
+bind-key v split-window -v -c "#{pane_current_path}"
+bind-key k split-window -h -c "#{pane_current_path}"
 
 # Ctr-z for zoom in zoom out
 bind-key -n C-z resize-pane -Z
