--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,10 +41,10 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 
 IGNOREEOF=10
-bind-key -r -T prefix  H resize-pane -L 2
-bind-key -r -T prefix  J resize-pane -D 2
-bind-key -r -T prefix  K resize-pane -U 2
-bind-key -r -T prefix  L resize-pane -R 2
+bind-key -r -T prefix  N resize-pane -L 2
+bind-key -r -T prefix  O resize-pane -R 2
+bind-key -r -T prefix  I resize-pane -U 2
+bind-key -r -T prefix  E resize-pane -D 2
 bind C-k send-keys -R \; clear-history
 
 #set -g default-terminal "tmux-256color"
