Using ctr-r for prev window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,7 @@ bind-key -n C-k select-pane -L
 bind-key -n C-o select-pane -t :.+
 
 bind-key -n C-n select-window -t :+
-bind-key -n C-b select-window -t :-
+bind-key -n C-r select-window -t :-
 
 # Channge backeground color of the active window
 set -g window-style 'bg=color239'
