--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,8 @@ bind-key k split-window -h -c "#{pane_current_path}"
 bind-key -n C-z resize-pane -Z
 
 
-unbind C-l
-bind-key -n C-l copy-mode
+unbind C-y
+bind-key -n C-y copy-mode
 bind-key m copy-mode
 setw -g mode-key vi
 set-window-option -g mode-keys vi
