--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ bind-key k split-window -h -c "#{pane_current_path}"
 # Ctr-z for zoom in zoom out
 bind-key -n C-z resize-pane -Z
 
+unbind C-o # No need to swap the panel
 
 unbind C-y
 bind-key -n C-y copy-mode
