--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,3 +65,6 @@ set-option -g set-clipboard on
 
 # Date time at right panel
 set-option -g status-right '#{window_panes} panes | %H:%M %d-%b-%y'
+
+# Disable escape time delay
+set -sg escape-time 0
