--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,3 +68,6 @@ set-option -g status-right '#{window_panes} panes | %H:%M %d-%b-%y'
 
 # Disable escape time delay
 set -sg escape-time 0
+
+# Ctr-a + ctr-o is annoying
+unbind-key -T prefix C-o
