--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,3 +71,13 @@ set -sg escape-time 0
 
 # Ctr-a + ctr-o is annoying
 unbind-key -T prefix C-o
+
+# searching inside tmux
+bind-key / run-shell -b 'sel="$(tmux capture-pane -pJ -S - | \
+  fzf-tmux -p 80%,60% --reverse --header="Search output" \
+    --bind "ctrl-u:page-up,ctrl-d:page-down")"; \
+  [ -z "$sel" ] && exit; \
+  esc="$(printf "%s" "$sel" | sed -e "s/[.[\\*^$()+?{}|\\\\]/\\\\&/g")"; \
+  tmux copy-mode \; send-keys -X search-forward "$esc"'
+
+
