--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,8 +72,8 @@ set -sg escape-time 0
 # Ctr-a + ctr-o is annoying
 unbind-key -T prefix C-o
 
-# searching inside tmux
-bind-key / run-shell -b 'sel="$(tmux capture-pane -pJ -S - | \
+# searching inside tmux Using ctr+/
+bind-key -n C-_ run-shell -b 'sel="$(tmux capture-pane -pJ -S - | \
   fzf-tmux -p 80%,60% --reverse --header="Search output" \
     --bind "ctrl-u:page-up,ctrl-d:page-down")"; \
   [ -z "$sel" ] && exit; \
