--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,10 @@ set -g window-active-style 'bg=terminal'
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 
+# Copy mode Escape to exit also
+bind -T copy-mode-vi Escape send-keys -X cancel
+bind -T copy-mode Escape send-keys -X cancel
+
 
 IGNOREEOF=10
 bind-key -r -T prefix  N resize-pane -L 2
