--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,11 @@ bind-key C-a send-prefix
 bind-key v split-window -v -c "#{pane_current_path}"
 bind-key k split-window -h -c "#{pane_current_path}"
 
+# Tmux sync environment variable when create new panel
+# bind-key v set-environment -F ZAI_API_KEY "#{@ZAI_API_KEY}" \; split-window -v -c "#{pane_current_path}"
+# bind-key k set-environment -F ZAI_API_KEY "#{@ZAI_API_KEY}" \; split-window -h -c "#{pane_current_path}"
+
+
 # Ctr-z for zoom in zoom out
 bind-key -n C-z resize-pane -Z
 
